--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/fire": "^7.5.0",
-    "@angular/forms": "^15.0.0",
+    "@angular/forms": "^15.1.2",
     "@angular/material": "^15.1.2",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
+    "@types/file-saver": "^2.0.5",
     "bootstrap": "^5.2.3",
+    "child_process": "^1.0.2",
+    "docx": "^7.8.2",
+    "file-saver": "^2.0.5",
     "firebase": "^9.16.0",
+    "fs": "^0.0.1-security",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
